--- a/index.html
+++ b/index.html
@@ -955,31 +955,34 @@
     <main id="mainContainer">
         <div id="homePage" class="page active">
             <!-- قسم الهيرو مع الفيديو -->
-            <!-- قسم الهيرو مع الفيديو -->
-<section class="hero">
-    <div class="hero-video-container">
-        <!-- ضع رابط Cloudinary هنا -->
-        <video class="hero-video" autoplay loop muted playsinline webkit-playsinline>
-            <source src="https://res.cloudinary.com/dnkuwf8q9/video/upload/v1772017742/6446152-hd_1920_1080_25fps_earwmb.mp4" type="video/mp4">
-            <!-- رابط احتياطي في حال مشكلة -->
-            <source src="https://assets.mixkit.co/videos/preview/mixkit-white-curtain-blowing-in-the-wind-4090-large.mp4" type="video/mp4">
-        </video>
-        <!-- طبقة داكنة فوق الفيديو -->
-        <div class="hero-overlay"></div>
-        
-        <!-- المحتوى النصي (يبقى كما هو) -->
-        <div class="hero-content">
-            <h1>فخامة التفاصيل تبدأ من شبابيك منزلك</h1>
-            <div class="hero-btns">
-                <button onclick="document.getElementById('categories').scrollIntoView({behavior: 'smooth'})" class="btn-gold">احسب سعر ستائرك الآن</button>
-                <a href="https://wa.me/9647883002797" class="btn-trans"><i class="fab fa-whatsapp"></i> استشارة مجانية</a>
-            </div>
-            <div class="social-hero">
-                <!-- روابط التواصل الاجتماعي كما هي -->
-            </div>
-        </div>
-    </div>
-</section>
+            <section class="hero">
+                <div class="hero-video-container">
+                    <!-- فيديو الخلفية من قناة شبابيك -->
+                    <video class="hero-video" autoplay loop muted playsinline webkit-playsinline>
+                        <source src="https://github.com/bilal-a100/videos/raw/main/curtains-video.mp4" type="video/mp4">
+                        <source src="https://assets.mixkit.co/videos/preview/mixkit-white-curtain-blowing-in-the-wind-4090-large.mp4" type="video/mp4">
+                    </video>
+                    <!-- طبقة داكنة فوق الفيديو -->
+                    <div class="hero-overlay"></div>
+                    
+                    <!-- المحتوى النصي -->
+                    <div class="hero-content">
+                        <h1>فخامة التفاصيل تبدأ من شبابيك منزلك</h1>
+                        <div class="hero-btns">
+                            <button onclick="document.getElementById('categories').scrollIntoView({behavior: 'smooth'})" class="btn-gold">احسب سعر ستائرك الآن</button>
+                            <a href="https://wa.me/9647883002797" class="btn-trans"><i class="fab fa-whatsapp"></i> استشارة مجانية</a>
+                        </div>
+                        <div class="social-hero">
+                            <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/shababek.curtains/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.tiktok.com/@shababek.curtains" target="_blank"><i class="fab fa-tiktok"></i></a>
+                            <a href="https://youtube.com/@shababek.curtains?si=KKsEbL98N0fq2e2U" target="_blank"><i class="fab fa-youtube"></i></a>
+                            <a href="https://x.com/ShababekCurtain" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                            <a href="https://www.snapchat.com/add/shababekcurtin?share_id=B2Prmbx5_Xo&locale=en-IQ" target="_blank"><i class="fab fa-snapchat"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <section id="categories" style="padding: 40px 0;">
                 <h2 style="text-align:center; font-weight:900; margin-bottom:15px;">أقسامنا المميزة</h2>
